Minor bug fixes for 1.10 Inject value button is now hidden on fullscreen popup (generate tab) ctrl+I added as inject shortcut on generate tab Added permanent y-scrollbar onto password matrix

--- a/Client/Extension/css/common.css
+++ b/Client/Extension/css/common.css
@@ -115,6 +115,16 @@ input[type='submit'], button, input[type='button']
 	margin-bottom: 1ex;
 }
 
+/** Force a Y-scrollbar**/
+/*
+	Only really applied to html on the password matrix
+	to stop it from jumping around when you search
+ */
+.y-scrollbar 
+{
+	overflow-y: scroll;
+}
+
 /** Save Button **/
 #saveContainer, .centeredContents
 {
